# icann-rdap

./: .gitignore  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  Pipfile  README.md  justfile  mkdocs.yml  release.md
icann-rdap-cli/: Cargo.toml  README.md
icann-rdap-cli/src/: after_long_help.txt  bootstrap.rs  dirs.rs  error.rs  lib.rs  main.rs  query.rs  rdap.env  request.rs  write.rs
icann-rdap-cli/src/args/: target.rs
icann-rdap-cli/src/dirs/: fcbs.rs  mod.rs  project.rs  rdap.env
icann-rdap-cli/src/rt/: exec.rs  mod.rs  results.rs
icann-rdap-cli/tests/integration/: cache.rs  check.rs  main.rs  queries.rs  source.rs  test_jig.rs  url.rs
icann-rdap-cli/tests/integration/rdap_cmd/: bootstrap.rs  cache.rs  check.rs  mod.rs  not_found.rs  queries.rs  source.rs  url.rs
icann-rdap-cli/tests/integration/rdap_test_cmd/: in_file.rs  mod.rs  stdin.rs  url.rs
icann-rdap-client/: Cargo.toml  README.md
icann-rdap-client/src/: cache.rs  client.rs  iana_request.rs  lib.rs  registered_redactions.rs  request.rs  rr.rs
icann-rdap-client/src/check/: autnum.rs  domain.rs  entity.rs  error.rs  help.rs  mod.rs  nameserver.rs  network.rs  search.rs  types.rs
icann-rdap-client/src/gtld/: domain.rs  entity.rs  error.rs  help.rs  mod.rs  nameserver.rs  network.rs  types.rs
icann-rdap-client/src/http/: client.rs  mod.rs  reqwest.rs  wrapped.rs
icann-rdap-client/src/iana/: bootstrap.rs  iana_request.rs  mod.rs
icann-rdap-client/src/md/: autnum.rs  domain.rs  entity.rs  error.rs  help.rs  mod.rs  nameserver.rs  network.rs  redacted.rs  search.rs  string.rs  table.rs  ttl.rs  types.rs
icann-rdap-client/src/query/: bootstrap.rs  mod.rs  qtype.rs  request.rs
icann-rdap-client/src/rdap/: mod.rs  qtype.rs  registered_redactions.rs  request.rs  rr.rs
icann-rdap-client/src/rdap/redacted/: mod.rs  registered_redactions.rs  simplify.rs  simplify_addr.rs  simplify_email.rs  simplify_ids.rs  simplify_names.rs  simplify_org.rs  simplify_phones.rs
icann-rdap-client/src/rpsl/: autnum.rs  domain.rs  entity.rs  error.rs  help.rs  mod.rs  nameserver.rs  network.rs  search.rs  ttl.rs
icann-rdap-client/src/test_files/: arin.json  example-1_empty_value-expected.json  example-1_empty_value.json  example-2_partial_value-expected.json  home.moscow-expected.gtld  home.moscow.json  lemonde.fr-expected.gtld  lemonde.fr.json  microsoft.click-expected.gtld  microsoft.click.json  nic.xyz.json
icann-rdap-client/src/test_files/md/autnum/: with_handle_and_no_show_redactions.md  with_handle_and_redactions.md  with_handle_and_remarks.md
icann-rdap-client/src/test_files/md/domain/: with_handle_and_no_show_redactions.md  with_handle_and_redactions.md  with_ldh_and_handle.md  with_ldh_and_secure_dns.md  with_ldh_and_variants.md  with_ldh_with_empty_links.md  with_ldh_with_events.md  with_ldh_with_one_link.md  with_ldh_with_two_links.md
icann-rdap-client/src/test_files/md/entity/: with_handle.md  with_handle_and_redactions.md  with_no_handle_but_roles.md
icann-rdap-client/src/test_files/md/error/: 404_with_description.md
icann-rdap-client/src/test_files/md/nameserver/: with_handle_and_no_show_redactions.md  with_handle_and_redactions.md  with_ldh_and_handle.md  with_ldh_only.md
icann-rdap-client/src/test_files/md/network/: with_handle_and_no_show_redactions.md  with_handle_and_redactions.md  with_handle_and_remarks.md
icann-rdap-client/src/test_files/md/redacted/: example-1_empty_value-expected.json  example-2_partial_value-expected.json  example-2_partial_value.json  example-3-dont_replace_redaction_of_a_number.json
icann-rdap-client/src/test_files/rpsl/domain/: with_ldh_and_handle_and_events.txt
icann-rdap-client/src/test_files/rpsl/entity/: with_handle.txt
icann-rdap-client/src/test_files/rpsl/error/: with_404_and_description.txt
icann-rdap-client/src/test_files/rpsl/nameserver/: with_ldh_and_handle.txt
icann-rdap-client/src/test_files/rpsl/network/: with_cidr_and_handle.txt
icann-rdap-common/: Cargo.toml  README.md
icann-rdap-common/src/: cache.rs  client.rs  dns_types.rs  httpdata.rs  iana.rs  lib.rs  media_types.rs  rdns.rs  utils.rs
icann-rdap-common/src/check/: autnum.rs  cache.rs  domain.rs  entity.rs  error.rs  help.rs  httpdata.rs  items.rs  mod.rs  nameserver.rs  network.rs  process.rs  search.rs  string.rs  types.rs
icann-rdap-common/src/contact/: from_vcard.rs  jscontact.rs  mod.rs  to_vcard.rs
icann-rdap-common/src/response/: autnum.rs  common.rs  domain.rs  entity.rs  error.rs  help.rs  jscontact.rs  lenient.rs  mod.rs  nameserver.rs  network.rs  obj_common.rs  redacted.rs  search.rs  ttl.rs  types.rs  values.rs
icann-rdap-common/src/response/test_files/: autnum_16509.json  domain_afnic_fr.json  domain_search_with_redaction.json  domains_ldhname_ns1_arin_net.json  entities_fn_arin.json  entity_arin_hostmaster.json  error_ripe_net.json  help_nic_fr.json  lookup_with_redaction.json  nameserver_ns1_nic_fr.json  network_192_198_0_0.json
icann-rdap-srv/: Cargo.toml  README.md
icann-rdap-srv/resources/: drill.yml
icann-rdap-srv/resources/test-data-files/: 0_2_192_in-addr_arpa.json  2001_db8__.json  as65541.json  entity-rfc9083-fig15.json  ns1_example_com.json  xn--fo-5ja_example.json
icann-rdap-srv/resources/test-state-files/: entity-rfc9083-fig17.json  ns1_xn--fo-5ja_example.json  ns2_example_com.json
icann-rdap-srv/src/: bootstrap.rs  config.rs  error.rs  lib.rs  server.rs
icann-rdap-srv/src/rdap/: autnum.rs  domain.rs  domains.rs  entities.rs  entity.rs  ip.rs  mod.rs  nameserver.rs  nameservers.rs  response.rs  router.rs  srvhelp.rs
icann-rdap-srv/src/storage/: data.rs  mod.rs
icann-rdap-srv/src/storage/mem/: config.rs  label_search.rs  mod.rs  ops.rs  rir_search.rs  state.rs  tx.rs
icann-rdap-srv/src/storage/pg/: config.rs  mod.rs  ops.rs  tx.rs
icann-rdap-srv/tests/integration/: main.rs  test_jig.rs
icann-rdap-srv/tests/integration/srv/: bootstrap.rs  domain.rs  entity.rs  jscontact.rs  mod.rs  nameserver.rs  redirect.rs  reverse_dns.rs  srvhelp.rs  ttl.rs
icann-rdap-srv/tests/integration/storage/: data.rs  mod.rs
(+29 files in other folders)
