[workspace]
members = [
  "icann-rdap-cli",
  "icann-rdap-client",
  "icann-rdap-common",
  "icann-rdap-srv"
]
resolver = "2"

[workspace.package]
version = "0.0.14"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icann/icann-rdap"
keywords = ["whois", "rdap"]

[workspace.dependencies]

# easy error handling
anyhow = "1.0"

# async traits
async-trait = "0.1"

# axum (web server)
axum = { version = "0.6", features = ["headers"] }
axum-macros = "0.3"

# client IP address extractor
axum-client-ip = "0.3.0"

# b-tree with ranges
btree-range-map = "0.7.2"

# macros for the builder pattern
buildstructor = "0.5"

# CIDR utilities
cidr-utils = "0.6"

# command line options parser
clap = { version = "4.4", features = [ "std", "derive", "env", "unstable-styles" ] }

# chrono (time and date library)
chrono = { version = "0.4", features = ["alloc", "std", "clock", "serde"], default-features = false }

# compile time constants formatting
const_format = "0.2"

# cross-platform application directories
directories = "5.0"

# loads environment variables from the a file
dotenv = "0.15.0"

# environment variable utilities
envmnt = "0.10.4"

# futures
futures = "0.3"

# futures-utils
futures-util = "0.3"

# macros to get the git version
git-version = "0.3"

# lazy static initilization
lazy_static = "1.4"

# headers (http headers)
headers = "0.3"

# http constructs
http = "0.2"

# hyper (http implementation used by axum)
hyper = { version = "0.14", features = ["full"] }

# for use prefixmap
ipnet = { version = "2.9", features = ["json"] }

# embedded pager
minus = {version = "5.4", features = ["dynamic_output", "search"] }

# percent encoding
pct-str = "1.2"

# ip address trie
prefix-trie = "0.2.4"

# regular expresions
regex = "1.7"

# http client library
reqwest = {version = "0.11", features = ["json", "stream", "native-tls-vendored"]}

# serialization / deserialization library
serde = { version = "1.0", features = [ "derive" ] }

# json serializer
serde_json = "1.0"

# sqlx (async db)
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "macros",
    "json",
    "offline",
] }

# enum utilities
strum = "0.24"
strum_macros = "0.24"

# terminal markdown generator
termimad = "0.23"

# error macros
thiserror = "1.0"

# tokio async runtime
tokio = { version = "1.29", features = [ "full" ] }

# tower (tokio/axum middleware)
tower = { version = "0.4", features = ["timeout", "util"] }
tower-http = { version = "0.3.3", features = [
    "add-extension",
    "trace",
    "cors",
] }

# tracing (logging)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

