[workspace]
members = [
  "icann-rdap-cli",
  "icann-rdap-client",
  "icann-rdap-common",
  "icann-rdap-srv"
]
resolver = "2"

[workspace.package]
version = "0.0.25"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icann/icann-rdap"
keywords = ["whois", "rdap"]

[workspace.dependencies]

# for suffix string searchs
ab-radix-trie = "0.2.1"

# easy error handling
anyhow = "1.0"

# async traits
async-trait = "0.1"

# axum (web server)
axum = { version = "0.7" }
axum-extra = { version = "0.9", features = [ "typed-header" ] }
axum-macros = "0.4"

# client IP address extractor
axum-client-ip = "0.5"

# b-tree with ranges
btree-range-map = "0.7.2"

# macros for the builder pattern
buildstructor = "0.6"

# CIDR utilities
cidr = "0.3.0"

# command line options parser
clap = { version = "4.4", features = [ "std", "derive", "env", "unstable-styles" ] }

# chrono (time and date library)
chrono = { version = "0.4", features = ["alloc", "std", "clock", "serde"], default-features = false }

# compile time constants formatting
const_format = "0.2"

# cross-platform application directories
directories = "5.0"

# loads environment variables from the a file
dotenv = "0.15.0"

# environment variable utilities
envmnt = "0.10.4"

# futures
futures = "0.3"

# futures-utils
futures-util = "0.3"

# macros to get the git version
git-version = "0.3"

# headers (http headers)
headers = "0.4"

# Hickory DNS client
hickory-client = "0.24"

# http constructs
http = "1.0"

# hyper (http implementation used by axum)
hyper = { version = "1.0", features = ["full"] }

# JSONPath
jsonpath-rust = "=0.5.0"
jsonpath_lib = "0.3.0"

# JSON Pretty Compact
json-pretty-compact = "0.1.2"

# internationalized domain names for applications
idna = "1.0"

# for use prefixmap
ipnet = { version = "2.9", features = ["json"] }

# embedded pager
minus = {version = "5.5", features = ["dynamic_output", "search"] }

# percent encoding
pct-str = "1.2"

# ip address trie
prefix-trie = "0.2.4"

# regular expresions
regex = "1.10"

# http client library
reqwest = {version = "0.12", features = ["json", "stream", "native-tls-vendored"]}

# serialization / deserialization library
serde = { version = "1.0", features = [ "derive" ] }

# json serializer
serde_json = "1.0"

# sqlx (async db)
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "macros",
    "json",
] }

# enum utilities
strum = "0.27"
strum_macros = "0.27"

# terminal markdown generator
termimad = "0.31"

# error macros
thiserror = "1.0"

# tokio async runtime
tokio = { version = "1.35", features = [ "full" ] }

# tower (tokio/axum middleware)
tower = { version = "0.4", features = ["timeout", "util"] }
tower-http = { version = "0.5", features = [
    "add-extension",
    "trace",
    "cors",
] }

# tracing (logging)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# url
url = "2.5"


[profile.release]
codegen-units = 1
lto = true
