[package]
name = "icann-rdap-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = """
An RDAP Command Line Interface client.
"""

[[bin]]
name = "rdap"
path = "src/main.rs"

[dependencies]

icann-rdap-client = { path = "../icann-rdap-client" }
icann-rdap-common = { path = "../icann-rdap-common" }

clap.workspace = true
dotenv.workspace = true
serde.workspace = true
serde_json.workspace = true
simplelog.workspace = true
termimad.workspace = true
tokio.workspace = true