[package]
name = "icann-rdap-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = """
An RDAP Command Line Interface client.
"""

[[bin]]
name = "rdap"
path = "src/main.rs"

[dependencies]

icann-rdap-client = { path = "../icann-rdap-client" }
icann-rdap-common = { path = "../icann-rdap-common" }

anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
const_format.workspace = true
directories.workspace = true
dotenv.workspace = true
is-terminal.workspace = true
lazy_static.workspace = true
minus.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
simplelog.workspace = true
termimad.workspace = true
thiserror.workspace = true
tokio.workspace = true