[package]
name = "icann-rdap-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = """
An RDAP Command Line Interface client.
"""

[[bin]]
name = "rdap"
path = "src/main.rs"

[dependencies]

icann-rdap-client = { version = "0.0.16", path = "../icann-rdap-client" }
icann-rdap-common = { version = "0.0.16", path = "../icann-rdap-common" }

anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
const_format.workspace = true
directories.workspace = true
dotenv.workspace = true
ipnet.workspace = true
lazy_static.workspace = true
minus.workspace = true
pct-str.workspace = true
prefix-trie.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
termimad.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]

icann-rdap-srv = { path = "../icann-rdap-srv" }

# cli assertions
assert_cmd = "2.0.11"

# CIDR utilities
cidr-utils = "0.5"

# fixture testings
rstest = "0.17.0"

# serial testings
serial_test = "2.0.0"

# test directories
test_dir = "0.2.0"

# tracing
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
