[package]
name = "icann-rdap-client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
#repository = "https://github.com/rust-lang/cargo"
readme = "README.md"
description = """
An RDAP client library.
"""

[dependencies]
buildstructor.workspace = true
pct-str.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true