[package]
name = "icann-rdap-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = """
An RDAP client library.
"""

[dependencies]

icann-rdap-common = { path = "../icann-rdap-common" }

buildstructor.workspace = true
cidr-utils.workspace = true
pct-str.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true