[package]
name = "icann-rdap-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = """
An RDAP client library.
"""

[dependencies]

icann-rdap-common = { version = "0.0.18", path = "../icann-rdap-common" }

buildstructor.workspace = true
cidr-utils.workspace = true
chrono.workspace = true
const_format.workspace = true
idna.workspace = true
jsonpath-rust.workspace = true
jsonpath_lib.workspace = true
lazy_static.workspace = true
pct-str.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true


[dev-dependencies]

# fixture testings
rstest = "0.17.0"

# tokio async runtime
tokio = { version = "1.21", features = [ "full" ] }
