[package]
name = "icann-rdap-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = """
Common RDAP data structures.
"""

[dependencies]
chrono.workspace = true
const_format.workspace = true
buildstructor.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true