[package]
name = "icann-rdap-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = """
Common RDAP data structures.
"""

[dependencies]
chrono.workspace = true
cidr-utils.workspace = true
const_format.workspace = true
buildstructor.workspace = true
ipnet.workspace = true
lazy_static.workspace = true
prefix-trie.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

[dev-dependencies]

# fixture testings
rstest = "0.17.0"
