[package]
name = "icann-rdap-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = """
Common RDAP data structures.
"""

[dependencies]
chrono.workspace = true
cidr-utils.workspace = true
const_format.workspace = true
buildstructor.workspace = true
idna.workspace = true
ipnet.workspace = true
lazy_static.workspace = true
prefix-trie.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

jsonpath-rust = "=0.5.0"
jsonpath_lib = "0.3.0"
regex = "1.5.4"

[dev-dependencies]

# fixture testings
rstest = "0.17.0"
