[package]
name = "icann-rdap-srv"
version.workspace = true
edition.workspace = true
license.workspace = true
description = """
An RDAP Server.
"""

[dependencies]

icann-rdap-client = { path = "../icann-rdap-client" }
icann-rdap-common = { path = "../icann-rdap-common" }

async-trait.workspace = true
axum.workspace = true
axum-macros.workspace = true
axum-client-ip.workspace = true
btree-range-map.workspace = true
buildstructor.workspace = true
chrono.workspace = true
cidr-utils.workspace = true
clap.workspace = true
dotenv.workspace = true
envmnt.workspace = true
ipnet.workspace = true
is-terminal.workspace = true
headers.workspace = true
http.workspace = true
hyper.workspace = true
lazy_static.workspace = true
pct-str.workspace = true
pinboard.workspace = true
prefix-trie.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]

# cli assertions
assert_cmd = "2.0.11"

# fixture testings
rstest = "0.17.0"

# test directories
test_dir = "0.2.0"